--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 <div class="wrapper">
-&copy; 2016 {{ site.author }}
+&copy; <script> new Date().getFullYear() + '';</script> {{ site.author }}
 </div>
 </footer>
 
