--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 <div class="wrapper">
-&copy; <span id="footerYear"></span> {{ site.author }}
+&copy; 2016 - <span id="footerYear"></span> {{ site.author }}. All Rights Reserved.
 </div>
     <script type="text/javascript">
         document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
