--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -202,7 +202,7 @@ $hide-sidebar-screen-width: 1120px;
 	.contact {
 		margin-top: 10px;
 		a {
-			background: #999;
+			background: #a6e22e;
 			color: #eee;
 			padding: 5px 10px;
 			text-decoration: none;
@@ -211,7 +211,7 @@ $hide-sidebar-screen-width: 1120px;
 			
 			&:hover {
 				transition: background 0.3s ease;
-				background: #666;
+				background: #66d9ef;
 			}
 		}
 	}
