--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -202,7 +202,7 @@ $hide-sidebar-screen-width: 1120px;
 	.contact {
 		margin-top: 10px;
 		a {
-			background: #66d9ef;
+			background: #6666dd;
 			color: #eee;
 			padding: 5px 10px;
 			text-decoration: none;
