--- a/css/main.scss
+++ b/css/main.scss
@@ -20,7 +20,7 @@ $on-laptop:        800px;
 $color-link: #036;
 $color-link-hover: #069;
 
-$header-bg: #607D8B;
+$header-bg: #669900;
 $header-bg-hover: #78909C;
 $header-link: #CFD8DC;
 $header-fg: #FFF;
