--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,7 +103,7 @@ $hide-sidebar-screen-width: 1120px;
 			height: 100%;
 			right: 0;
 			top: 0;
-			background: #EEE;
+			background: #EEE000;
 		}
 	}
 	
@@ -211,7 +211,7 @@ $hide-sidebar-screen-width: 1120px;
 			
 			&:hover {
 				transition: background 0.3s ease;
-				background: #a6e22e;
+				background: #208020;
 			}
 		}
 	}
