--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,5 +1,5 @@
 body {
-	background-color: #e0e0e3;
+	background-color: #a0a0e3;
 }
 
 .wrapper {
@@ -103,7 +103,7 @@ $hide-sidebar-screen-width: 1120px;
 			height: 100%;
 			right: 0;
 			top: 0;
-			background: #EEE000;
+			background: #EEE;
 		}
 	}
 	
@@ -211,7 +211,7 @@ $hide-sidebar-screen-width: 1120px;
 			
 			&:hover {
 				transition: background 0.3s ease;
-				background: #208020;
+				background: #50c020;
 			}
 		}
 	}
