--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,7 +103,7 @@ $hide-sidebar-screen-width: 1120px;
 			height: 100%;
 			right: 0;
 			top: 0;
-			background: #EEE;
+			background: #FFFFFF;
 		}
 	}
 	
@@ -135,7 +135,7 @@ $hide-sidebar-screen-width: 1120px;
 	float: right;
 	width: $col-secnod-width;
 	padding: 20px;
-	background: #EEE;
+	background: #FFFFFF;
 	z-index: 10;
 }
 .col-box{
@@ -203,7 +203,7 @@ $hide-sidebar-screen-width: 1120px;
 		margin-top: 10px;
 		a {
 			background: #6666dd;
-			color: #eee;
+			color: #FFFFFF;
 			padding: 5px 10px;
 			text-decoration: none;
 			border-radius: 5px;
