--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -51,7 +51,7 @@
         }
         code, pre, pre * {
             color: #666;
-            background-color: #FFFFFF;
+            background-color: #eee;
         }
         th {
             border-color: #ccc;
