--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -87,7 +87,7 @@ $hide-sidebar-screen-width: 1120px;
 
 	.wrapper {
 		position: relative;
-		background: #eee;
+		background: #FFFFFF;
 		box-shadow: 0 1px 4px #999;
 		outline: 1px solid #CCC;
 		&:after {
@@ -103,7 +103,7 @@ $hide-sidebar-screen-width: 1120px;
 			height: 100%;
 			right: 0;
 			top: 0;
-			background: #FFFFFF;
+			background: #EEE;
 		}
 	}
 	
