--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,7 +103,7 @@ $hide-sidebar-screen-width: 1120px;
 			height: 100%;
 			right: 0;
 			top: 0;
-			background: #EEE;
+			background: #edf;
 		}
 	}
 	
@@ -135,7 +135,7 @@ $hide-sidebar-screen-width: 1120px;
 	float: right;
 	width: $col-secnod-width;
 	padding: 20px;
-	background: #eee;
+	background: #edf;
 	z-index: 10;
 }
 .col-box{
