--- a/css/main.scss
+++ b/css/main.scss
@@ -18,10 +18,10 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 $color-link: #036;
-$color-link-hover: #0d0;
+$color-link-hover: #086;
 
 $header-bg: #704090;
-$header-bg-hover: #0d0;
+$header-bg-hover: #086;
 $header-link: #CFD8DC;
 $header-fg: #FFF;
 
