--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -39,7 +39,7 @@
         }
         
         pre {
-        	margin: 0 -30px;
+        	/*margin: 0 -30px;*/
             @include media-query($on-palm) {
 		        margin: 0 -10px;
             }
