--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,11 +30,11 @@ code {
 }
 pre {
 	overflow-x: auto;
-	padding: 10px;
+	padding: 10px 20px;
 }
 pre, pre code {
 	color: #fafafa;
-	background-color: #223;
+	background-color: #528;
 }
 pre code {
 	padding: 0;	
