--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -40,7 +40,7 @@
         
         pre {
             border-radius: 4px;
-            border: 1px solid #c0c0e3;
+            border: 1px solid #c9c6c9;
             @include media-query($on-palm) {
 		        margin: 0 -10px;
             }
