--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,8 +33,8 @@ pre {
 	padding: 10px 20px;
 }
 pre, pre code {
-	color: #555555;
-	background-color: #f5f5f5;
+	color: #5a5a5a;
+	background-color: #f6f5f6;
 }
 pre code {
 	padding: 0;	
