--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -29,7 +29,7 @@
     .highlight .kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
     .highlight .kt { color: #00BB00; font-weight: bold } /* Keyword.Type */
     .highlight .m { color: #666666 } /* Literal.Number */
-    .highlight .s { color: #BB4444 } /* Literal.String */
+    .highlight .s { color: #009966 } /* Literal.String */
     .highlight .na { color: #BB4444 } /* Name.Attribute */
     .highlight .nb { color: #AA22FF } /* Name.Builtin */
     .highlight .nc { color: #0000FF } /* Name.Class */
