--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -23,7 +23,7 @@
     .highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
     .highlight .gt { color: #0044DD } /* Generic.Traceback */
     .highlight .kc { color: #AA22FF; font-weight: bold } /* Keyword.Constant */
-    .highlight .kd { color: #AA22FF; font-weight: bold } /* Keyword.Declaration */
+    .highlight .kd { color: #cc8800; font-weight: bold } /* Keyword.Declaration */
     .highlight .kn { color: #AA22FF; font-weight: bold } /* Keyword.Namespace */
     .highlight .kp { color: #AA22FF } /* Keyword.Pseudo */
     .highlight .kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
@@ -34,7 +34,7 @@
     .highlight .nb { color: #AA22FF } /* Name.Builtin */
     .highlight .nc { color: #0000FF } /* Name.Class */
     .highlight .no { color: #880000 } /* Name.Constant */
-    .highlight .nd { color: #9a9a00 } /* Name.Decorator */
+    .highlight .nd { color: #baba00 } /* Name.Decorator */
     .highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
     .highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
     .highlight .nf { color: #00A000 } /* Name.Function */
