--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -32,12 +32,12 @@
     .highlight .s { color: #009966 } /* Literal.String */
     .highlight .na { color: #BB4444 } /* Name.Attribute */
     .highlight .nb { color: #AA22FF } /* Name.Builtin */
-    .highlight .nc { color: #0000FF } /* Name.Class */
+    .highlight .nc { color: #221199 } /* Name.Class */
     .highlight .no { color: #880000 } /* Name.Constant */
-    .highlight .nd { color: #baba00 } /* Name.Decorator */
+    .highlight .nd { color: #baab00 } /* Name.Decorator */
     .highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
     .highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-    .highlight .nf { color: #00A000 } /* Name.Function */
+    .highlight .nf { color: #bb4444 } /* Name.Function */
     .highlight .nl { color: #A0A000 } /* Name.Label */
     .highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
     .highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */
