--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -4,7 +4,7 @@
     .highlight  { background: #f8f8f8; }
     .highlight .c { color: #008800; font-style: italic } /* Comment */
     .highlight .err { border: 1px solid #FF0000 } /* Error */
-    .highlight .k { color: #AA22FF; font-weight: bold } /* Keyword */
+    .highlight .k { color: #cc8800; font-weight: bold } /* Keyword */
     .highlight .o { color: #666666 } /* Operator */
     .highlight .ch { color: #008800; font-style: italic } /* Comment.Hashbang */
     .highlight .cm { color: #008800; font-style: italic } /* Comment.Multiline */
