--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -27,7 +27,7 @@
     .highlight .kn { color: #AA22FF; font-weight: bold } /* Keyword.Namespace */
     .highlight .kp { color: #AA22FF } /* Keyword.Pseudo */
     .highlight .kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
-    .highlight .kt { color: #00BB00; font-weight: bold } /* Keyword.Type */
+    .highlight .kt { color: #aaBB00; font-weight: bold } /* Keyword.Type */
     .highlight .m { color: #666666 } /* Literal.Number */
     .highlight .s { color: #009966 } /* Literal.String */
     .highlight .na { color: #BB4444 } /* Name.Attribute */
