--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -22,7 +22,7 @@
     .highlight .gs { font-weight: bold } /* Generic.Strong */
     .highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
     .highlight .gt { color: #0044DD } /* Generic.Traceback */
-    .highlight .kc { color: #AA22FF; font-weight: bold } /* Keyword.Constant */
+    .highlight .kc { color: #dc8700; font-weight: bold } /* Keyword.Constant */
     .highlight .kd { color: #cc8800; font-weight: bold } /* Keyword.Declaration */
     .highlight .kn { color: #AA22FF; font-weight: bold } /* Keyword.Namespace */
     .highlight .kp { color: #AA22FF } /* Keyword.Pseudo */
