--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,11 +6,11 @@ body {
 }
 a {
 	text-decoration: none;
-	color: #08f;
+	color: #06a;
 }
 a:hover, a:focus {
 	text-decoration:underline;
-	color: #8bf;
+	color: #29c;
 }
 blockquote {
 	background: #FFF;
