--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -34,7 +34,7 @@
     .highlight .nb { color: #AA22FF } /* Name.Builtin */
     .highlight .nc { color: #221199 } /* Name.Class */
     .highlight .no { color: #880000 } /* Name.Constant */
-    .highlight .nd { color: #dfbb22 } /* Name.Decorator */
+    .highlight .nd { color: #dca800 } /* Name.Decorator */
     .highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
     .highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
     .highlight .nf { color: #bb4444 } /* Name.Function */
