--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -28,7 +28,7 @@
     .highlight .kp { color: #AA22FF } /* Keyword.Pseudo */
     .highlight .kr { color: #AA22FF; font-weight: bold } /* Keyword.Reserved */
     .highlight .kt { color: #ddaa00; font-weight: bold } /* Keyword.Type */
-    .highlight .m { color: #666666 } /* Literal.Number */
+    .highlight .m { color: #5588dd } /* Literal.Number */
     .highlight .s { color: #009966 } /* Literal.String */
     .highlight .na { color: #BB4444 } /* Name.Attribute */
     .highlight .nb { color: #AA22FF } /* Name.Builtin */
@@ -44,11 +44,11 @@
     .highlight .nv { color: #B8860B } /* Name.Variable */
     .highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
     .highlight .w { color: #bbbbbb } /* Text.Whitespace */
-    .highlight .mb { color: #666666 } /* Literal.Number.Bin */
-    .highlight .mf { color: #666666 } /* Literal.Number.Float */
-    .highlight .mh { color: #666666 } /* Literal.Number.Hex */
-    .highlight .mi { color: #666666 } /* Literal.Number.Integer */
-    .highlight .mo { color: #666666 } /* Literal.Number.Oct */
+    .highlight .mb { color: #5588dd } /* Literal.Number.Bin */
+    .highlight .mf { color: #5588dd } /* Literal.Number.Float */
+    .highlight .mh { color: #5588dd } /* Literal.Number.Hex */
+    .highlight .mi { color: #5588dd } /* Literal.Number.Integer */
+    .highlight .mo { color: #5588dd } /* Literal.Number.Oct */
     .highlight .sa { color: #BB4444 } /* Literal.String.Affix */
     .highlight .sb { color: #BB4444 } /* Literal.String.Backtick */
     .highlight .sc { color: #BB4444 } /* Literal.String.Char */
@@ -68,5 +68,5 @@
     .highlight .vg { color: #B8860B } /* Name.Variable.Global */
     .highlight .vi { color: #B8860B } /* Name.Variable.Instance */
     .highlight .vm { color: #B8860B } /* Name.Variable.Magic */
-    .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
+    .highlight .il { color: #5588dd } /* Literal.Number.Integer.Long */
 }
