--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -38,7 +38,7 @@
     .highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
     .highlight .ne { color: #D2413A; font-weight: bold } /* Name.Exception */
     .highlight .nf { color: #bb4444 } /* Name.Function */
-    .highlight .nl { color: #A0A000 } /* Name.Label */
+    .highlight .nl { color: #996699 } /* Name.Label */
     .highlight .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
     .highlight .nt { color: #008000; font-weight: bold } /* Name.Tag */
     .highlight .nv { color: #B8860B } /* Name.Variable */
