--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,8 +32,9 @@ body {
 		text-decoration: none;
 		font-size: $base-font-size;
 		line-height: $base-font-size * 2;
-		&:hover, &:focus {
-			background: $header-bg-hover;
+		&:hover {
+			transition: background 0.3s ease;
+			color: #50c020;
 		}
 	}
 	.site-nav {
