--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,7 +33,7 @@ body {
 		font-size: $base-font-size;
 		line-height: $base-font-size * 2;
 		&:hover {
-			transition: background 0.3s ease;
+			transition: color 0.3s ease;
 			color: #50c020;
 		}
 	}
