--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,6 +31,7 @@ body {
 		color: $header-fg;
 		text-decoration: none;
 		font-size: $base-font-size;
+		font-weight: bold;
 		line-height: $base-font-size * 2;
 		&:hover {
 			transition: color 0.3s ease;
