--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,7 +35,7 @@ body {
 		line-height: $base-font-size * 2;
 		&:hover {
 			transition: color 0.3s ease;
-			color: #50c020;
+			color: #ddccff;
 		}
 	}
 	.site-nav {
