--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,12 +30,12 @@ body {
 		float: left;
 		color: $header-fg;
 		text-decoration: none;
-		font-size: $base-font-size;
+		font-size: $base-font-size * 1.1;
 		font-weight: bold;
 		line-height: $base-font-size * 2;
 		&:hover {
 			transition: color 0.3s ease;
-			color: #ddccff;
+			color: #fff;
 		}
 	}
 	.site-nav {
