--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,7 @@ $color-link: #036;
 $color-link-hover: #096;
 
 $header-bg: #704090;
-$header-bg-hover: #096;
+$header-bg-hover: #9080b0;
 $header-link: #CFD8DC;
 $header-fg: #ddccff;
 
