--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,10 @@
 <header class="header">
   <div class="wrapper">
     <div id="sidebar-toggle">TOC</div>
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">
+      <div>{{ site.title }}</div>
+      <div>{{ site.title }}</div>
+    </a>
     <nav class="site-nav">
       {% for link in site.header.links %}{% assign url = link[1] %}
         {% assign urlchk = url | split: "/" %}{% if urlchk[0] == '' and urlchk[1] != '' %}{% assign uprefix = site.baseurl %}{% else %}{% assign uprefix = ''%}{% endif %}
