--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <div id="sidebar-toggle">TOC</div>
     <a class="site-title" href="{{ site.baseurl }}/">
       <div>{{ site.title }}</div>
-      <div class="subtitle">{{ subsite.title }}</div>
+      <div class="subtitle">{{ site.subtitle }}</div>
     </a>
     <nav class="site-nav">
       {% for link in site.header.links %}{% assign url = link[1] %}
