--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,9 +38,10 @@ body {
 			color: #fff;
 		}
 		.subtitle {
-			font-size: $base-font-size * 0.5;
 			font-weight: lighter;
 			padding: 0px;
+			width: 50%;
+			height: 50%;
 		}
 	}
 	.site-nav {
