--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,6 +38,7 @@ body {
 			color: #fff;
 		}
 		.subtitle {
+			line-height: $base-font-size * 1;
 			font-size: $base-font-size * 0.5;
 			font-weight: lighter;
 			padding: 0px;
