--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,7 +32,8 @@ body {
 		text-decoration: none;
 		font-size: $base-font-size * 1.1;
 		font-weight: bold;
-		line-height: $base-font-size * 2;
+		line-height: $base-font-size * 1;
+		margin: 0px;
 		&:hover {
 			transition: color 0.3s ease;
 			color: #fff;
