--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,7 +46,7 @@ body {
 			display:inline-block;
 			*display:inline;
 			*zoom:1;
-			border-top: 1px solid $header-fg;
+			border-top: 1px solid #bb99cc;
 			padding: 3px;
 		}
 	}
