--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,7 +46,8 @@ body {
 			display:inline-block;
 			*display:inline;
 			*zoom:1;
-			border-top: 1px solid #bb99cc;
+			border-top: 1px solid #aa88cc;
+			color: #aa88cc;
 			padding: 3px;
 		}
 	}
