--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,6 +34,7 @@ body {
 		font-weight: bold;
 		line-height: $base-font-size * 1;
 		margin: 0px;
+		padding-left: 3px;
 		&:hover {
 			transition: color 0.3s ease;
 			color: #fff;
@@ -42,11 +43,10 @@ body {
 			line-height: $base-font-size * 0.5;
 			font-size: $base-font-size * 0.5;
 			font-weight: lighter;
-			padding: 0px;
 			display:inline-block;
 			*display:inline;
 			*zoom:1;
-			border-top: 1px solid #aa88cc;
+			border-top: 1px solid #aa66cc;
 			color: #aa88cc;
 			padding: 3px;
 		}
