--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,6 +26,9 @@ body {
 	
     #sidebar-toggle { display: none; }
 
+	.header-img {
+		float: left;
+	}
 	.site-title {
 		float: left;
 		color: $header-fg;
