--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <div class="header-placeholder"></div>
 <header class="header">
-  <div class="wrapper">
+  < class="wrapper">
     <div id="sidebar-toggle">TOC</div>
+    <img class="header-img" src="/img/solarwind.jpg">
     <a class="site-title" href="{{ site.baseurl }}/">
       <div>{{ site.title }}</div>
       <div class="subtitle">{{ site.subtitle }}</div>
