--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,7 +30,8 @@ body {
 		float: left;
 		width: auto;
 		height: 32px;
-		margin: 3px;
+		margin: 3px auto;
+		display: block;
 	}
 	.site-title {
 		float: left;
