--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,7 +30,7 @@ body {
 		float: left;
 		width: auto;
 		height: 32px;
-		margin: 3px auto;
+		margin: 3px 3px 0px 3px;
 		display: block;
 	}
 	.site-title {
