--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <header class="header">
   <div class="wrapper">
     <div id="sidebar-toggle">TOC</div>
-    <img class="header-img" src="/img/solarwind.jpg" alt="header-img">
+    <img class="header-img" src="/img/header-img.png" alt="header-img">
     <a class="site-title" href="{{ site.baseurl }}/">
       <div>{{ site.title }}</div>
       <div class="subtitle">{{ site.subtitle }}</div>
