--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -64,7 +64,8 @@ body {
 		a {
 			text-decoration: none;
 			color: $header-link;
-			padding: 15px 20px;
+			padding: 18px 20px;
+			margin: 0px;
 			white-space: nowrap;
 		
 			&:hover, &:focus {
