--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,8 +40,6 @@ body {
 		font-size: $base-font-size * 1.3;
 		font-weight: bold;
 		line-height: $base-font-size * 1;
-		margin: 5px;
-		padding: 5px 0px 3px 3px;
 		display:inline-block;
 		*display:inline;
 		*zoom:1;
@@ -56,6 +54,7 @@ body {
 			border-top: 1px solid #aa88cc;
 			color: #aa88cc;
 			padding: 3px;
+			margin-top: 3px;
 		}
 	}
 	.site-nav {
