--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 <header class="header">
   <div class="wrapper">
     <div id="sidebar-toggle">TOC</div>
-    <a class="header-img" href="{{ site.baseurl }}/">
-      <img src="/img/header-img.png" alt="header-img">
+    <a href="{{ site.baseurl }}/">
+      <img class="header-img" src="/img/header-img.png" alt="header-img">
     </a>
     <a class="site-title" href="{{ site.baseurl }}/">
       <div>{{ site.title }}</div>
