--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
 <div class="wrapper">
 &copy; 2016 - <span id="footerYear"></span> {{ site.author }}. All Rights Reserved.
 </div>
+    <div class="wrapper">
+        Hosted on GitHub Pages - Theme by [EasyBook](https://github.com/laobubu/jekyll-theme-EasyBook)
+    </div>
     <script type="text/javascript">
         document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
     </script>
