--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
 <div class="wrapper">
-&copy; 2016 - <span id="footerYear"></span> {{ site.author }}. All Rights Reserved.
+&copy; 2016 - <span id="footerYear"></span> {{ site.author }}. All Rights Reserved
 </div>
     <div class="wrapper">
-        Hosted on GitHub Pages - Theme by <a href="https://github.com/laobubu/jekyll-theme-EasyBook">EasyBook</a>
+        Hosted on GitHub Pages. Theme by <a href="https://github.com/laobubu/jekyll-theme-EasyBook">EasyBook</a>
     </div>
     <script type="text/javascript">
         document.getElementById('footerYear').innerHTML = new Date().getFullYear() + '';
