--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -34,7 +34,7 @@
             margin-top: 30px;
         }
         
-        h1, h2, h3 {
+        h1 {
             border-bottom: 1px solid #CCC;
         }
         
