--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,9 +13,9 @@ a:hover, a:focus {
 	color: #29c;
 }
 blockquote {
-	background: #ddd;
+	background: #eee;
 	margin:0;
-	padding: 2px 20px;
+	padding: 0px 10px;
 	border-left: 10px solid #CCC;
 }
 code,pre {
@@ -24,7 +24,7 @@ code,pre {
 }
 code {
 	color: #900;
-	background-color: #ddd;
+	background-color: #eee;
 	padding: 2px 5px;
 	border-radius: 5px;
 }
