--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,9 +13,9 @@ a:hover, a:focus {
 	color: #29c;
 }
 blockquote {
-	background: #eee;
+	background: #fef;
 	margin:0;
-	padding: 0px 10px;
+	padding: 1px 15px;
 	border-left: 10px solid #CCC;
 }
 code,pre {
