--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,9 +13,9 @@ a:hover, a:focus {
 	color: #29c;
 }
 blockquote {
-	background: #fefeff;
+	background: #f9f5ff;
 	margin:0;
-	padding: 1px 12px;
+	padding: 1px 10px;
 	border-left: 10px solid #CCC;
 }
 code,pre {
