--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,10 +13,11 @@ a:hover, a:focus {
 	color: #29c;
 }
 blockquote {
+	color: #5a5a5a;
 	background: #f9f5fa;
 	margin:0;
 	padding: 0px 10px;
-	border-left: 10px solid #CCC;
+	border-left: 5px solid #CCC;
 }
 code,pre {
 	font-family:  $code-font-family;
