--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -44,7 +44,7 @@
     .post-excerpt {
         &, * {
             font-size: $small-font-size;
-            line-height: $small-font-size;
+            line-height: $small-font-size*1.2;
             padding-top: 0;
             padding-bottom: 0;
 	        color: #333;
