--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,8 +60,8 @@ table {
 	
 	th {
 		border-color: #555;
-		background: #aaa;
-		color: #fff;
+		background: #dcf;
+		color: #333;
 		font-weight:normal;
 	}
 	
