--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,8 +60,8 @@ table {
 	
 	th {
 		border-color: #555;
-		background: #dcf;
-		color: #333;
+		background: #f5eeff;
+		color: #222;
 		font-weight:normal;
 	}
 	
