--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-    <p>
+    <p class="post-meta">
       <i>({{ page.content | number_of_words }} words, {{ page.content | number_of_words | divided_by:270 }} minutes)</i>
     </p>
   </header>
