--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="col-box">
-  <div class="col-box-title"><b>Highlights</b>></div>
+  <div class="col-box-title"><b>Highlights</b></div>
   <ul class="post-list">
     {% for post in site.posts %}
       {% if post.highlight %}
