--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@
       {% if post.highlight %}
         <li style="margin-bottom:10px">
           <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-            {{ post.title }}
+            <b>{{ post.title }}</b>
             <img src="/img/hot.gif" sizes="23x7">
           </a>
         </li>
