--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,7 @@
         <li style="margin-bottom:10px">
           <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
             <b>{{ post.title }}</b>
-            <img src="/img/hot.gif" sizes="23x7">
+            <img src="/img/hot.gif">
           </a>
         </li>
       {% endif %}
