--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <img class="header-img" src="/img/header-img.png" alt="header-img">
     </a>
     <a class="site-title" href="{{ site.baseurl }}/">
-      <div>{{ site.title }}</div>
+      <div>{{ site.maintitle }}</div>
       <div class="subtitle">{{ site.subtitle }}</div>
     </a>
     <nav class="site-nav">
