--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,6 +32,15 @@ body {
 		height: 36px;
 		margin: 0px 5px 4px 0px;
 		display: block;
+
+		filter:alpha(opacity=50);
+		-moz-opacity:0.5;
+		opacity:0.5;
+		&:hover {
+			filter:alpha(opacity=100);
+			-moz-opacity:1;
+			opacity:1;
+		}
 	}
 	.site-title {
 		float: left;
