--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,7 +37,7 @@ body {
 		-moz-opacity:0.5;
 		opacity:0.5;
 		&:hover {
-			transition: opacity 0.5s ease;
+			transition: opacity 0.5s ease-in-out;
 			filter:alpha(opacity=100);
 			-moz-opacity:1;
 			opacity:1;
@@ -54,7 +54,7 @@ body {
 		*display:inline;
 		*zoom:1;
 		&:hover {
-			transition: color 0.5s ease;
+			transition: color 0.5s ease-in-out;
 			color: #fff;
 		}
 		.subtitle {
@@ -65,7 +65,7 @@ body {
 			color: #aa88cc;
 			padding: 3px;
 			&:hover {
-				transition: color 0.5s ease;
+				transition: color 0.5s ease-in-out;
 				color: #fff;
 			}
 		}
