--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,7 @@
 <div class="col-box col-box-author">
-  <img class="avatar" src="{{ site.avatar }}" alt="{{ site.author }}">
+  <a href="https://github.com/ZhongyangMA">
+    <img class="avatar" src="{{ site.avatar }}" alt="{{ site.author }}">
+  </a>
   <div class="col-box-title name">{{ site.author }}</div>
   <p>{{ site.profile }}</p>
   <p class="contact">
